# LFMusic

./: .gitignore  FL_STUDIO_KILLER_4_PHASES_COMPLETE.md  FL_STUDIO_KILLER_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  PROFESSIONAL_UPGRADE_GUIDE.md  QUICK_START_VISUAL.md  README.md  README_FINAL.md  build-mac.sh  build-win.bat  package-lock.json  package.json
OmegaStudio/: .gitignore  ARCHITECTURE.md  BUILD.md  BUILD_SUCCESS.md  CHECKLIST.md  CMakeLists.txt  COMPLETE_ALL_18_TASKS.md  COMPLETE_IMPLEMENTATION_FINAL.md  FINAL_COMPLETION_REPORT.md  FINAL_INTEGRATION.md  FINAL_SUMMARY.md  FL_STUDIO_2025_IMPLEMENTATION_COMPLETE.md  FL_STUDIO_2025_PROFESSIONAL_DESIGN_COMPLETE.md  FL_STUDIO_GUI_UPDATE.md  FL_STUDIO_KILLER_COMPLETE_FINAL.md  FL_STUDIO_KILLER_GUI_COMPLETE.md  FL_STUDIO_KILLER_IMPLEMENTATION.md  GOD_TIER_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUCCESS.md  INTEGRATION_STATUS.md  Info.plist  LICENSE  METRICS_REAL.md  OmegaStudio.jucer  PROJECT_COMPLETE.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_COMPLETE.md  RESUMEN_EJECUTIVO.md  ROADMAP.md  TECHNICAL_PLAN.md  THIS_IS_THE_END.md  build.sh  welcome.sh
OmegaStudio/Source/: JuceHeader.h
OmegaStudio/Source/AI/: ChordGenerator.cpp  ChordGenerator.h  GopherAssistant.cpp  GopherAssistant.h  LoopStarter.cpp  LoopStarter.h  StemSeparationService.cpp  StemSeparationService.h
OmegaStudio/Source/Arrangement/: Playlist.h
OmegaStudio/Source/Audio/: AudioClip.h  AudioRecorder.cpp  AudioRecorder.h  AudioToMidi.cpp  AudioToMidi.h  MacroRack.h  PluginSystemAdvanced.h  ReferenceTrack.h  SampleSlicer.cpp  SampleSlicer.h  VelocityLayers.cpp  VelocityLayers.h  VocalProductionSuite.cpp  VocalProductionSuite.h
OmegaStudio/Source/Audio/AI/: AIFeatures.cpp  AIFeatures.h  AIJobQueue.h  AIServiceStubs.h  AIVocalTuning.cpp  AIVocalTuning.h  AdvancedAI.cpp  AdvancedAI.h  ChordGenerator.cpp  ChordGenerator.h  DenoiseService.cpp  DenoiseService.h  GopherAssistant.cpp  GopherAssistant.h  OnnxRuntimeWrapper.cpp  OnnxRuntimeWrapper.h  StemSeparation.cpp  StemSeparation.h  VocalEnhancer.cpp  VocalEnhancer.h
OmegaStudio/Source/Audio/Analysis/: AdvancedVisualizers.cpp  AdvancedVisualizers.h  DynamicRangeAnalyzer.cpp  DynamicRangeAnalyzer.h  ReferenceMatching.cpp  ReferenceMatching.h  SpectralAnalyzer.cpp  SpectralAnalyzer.h  SpectrumAnalyzer.cpp  SpectrumAnalyzer.h  TonalBalance.cpp  TonalBalance.h
OmegaStudio/Source/Audio/DSP/: BreathControl.cpp  BreathControl.h  DeEsser.cpp  DeEsser.h  LimiterMaximizer.cpp  LimiterMaximizer.h  MasteringBundle.cpp  MasteringBundle.h  MultibandCompressor.cpp  MultibandCompressor.h  ParametricEQ.cpp  ParametricEQ.h  PitchCorrection.cpp  PitchCorrection.h  ProfessionalEffects.cpp  ProfessionalEffects.h  SIMDProcessor.cpp  SIMDProcessor.h  SidechainCompression.cpp  SidechainCompression.h  SliceToMIDI.h  TimeStretch.cpp  TimeStretch.h  VocalComping.cpp  VocalComping.h  VocalHarmonizer.cpp  VocalHarmonizer.h  VocalProcessingBundle.cpp  VocalProcessingBundle.h
OmegaStudio/Source/Audio/Effects/: CreativeEffects.cpp  CreativeEffects.h  PremiumFX.cpp  PremiumFX.h  RackProcessor.cpp  RackProcessor.h
OmegaStudio/Source/AudioEditors/: AudioEditors.h
OmegaStudio/Source/Composition/: ChordProgressionSystem.cpp  CompositionTools.h
OmegaStudio/Source/Content/: ContentLibrary.cpp  ContentLibrary.h  SmartBrowser.cpp  SmartBrowser.h
OmegaStudio/Source/Core/: Application.cpp  Application.h  Main.cpp
OmegaStudio/Source/Effects/: FLMobileRack.h  PremiumEffects.h
OmegaStudio/Source/GUI/: AdvancedBrowserSystem.h  AdvancedComponents.cpp  AdvancedComponents.h  AdvancedMixerFeatures.h  AdvancedPianoRollFeatures.h  AdvancedPlaylistFeatures.h  AnimationSystem.h  AudioEditorWindow.h  AutomationEditor.h  BrowserComponent.h  ChannelRackEditor.h  ChannelRackUI.cpp  ChannelRackUI.h  ContextMenuSystem.h  DockingSystem.h  DrumMachineUI.h  EffectUIs.h  FLStudio2025GUI.h  FLStudio2025Interface.cpp  FLStudio2025Interface.h  FLStudioLookAndFeel.cpp  FLStudioLookAndFeel.h  FLStudioMainWindow.cpp  FLStudioMainWindow.h  FLStudioReplicaGUI.h  FLStudioUltimateGUI.h  FLStudioUltimateGUI_Minimal.h  FLStudioUltimateGUI_Simple.h  FMSynthUI.h  FunctionalChannelRack.h  FunctionalMainWindow.h  FunctionalMixer.h  FunctionalPianoRoll.h  FunctionalPlaylist.h  FunctionalTransportBar.h  InteractiveBrowser.h  InteractiveChannelRack.h  InteractiveMixer.h  InteractivePianoRoll.h  InteractivePlaylist.h  (+36 more)
OmegaStudio/Source/Instruments/: PremiumSynths.h
OmegaStudio/Source/MIDI/: MIDIAdvanced.h  PianoRoll.h
OmegaStudio/Source/Memory/: LockFreeFIFO.h  MemoryPool.cpp  MemoryPool.h
OmegaStudio/Source/Mixer/: ChannelStrip.cpp  ChannelStrip.h  Mixer.h  MixerEngine.cpp  MixerEngine.h  RoutingMatrix.cpp  RoutingMatrix.h
OmegaStudio/Source/Mobile/: MobileRackBridge.h
OmegaStudio/Source/Performance/: PerformanceManager.cpp  PerformanceManager.h  PerformanceSystem.h
OmegaStudio/Source/Plugins/: PluginHosting.h
OmegaStudio/Source/Project/: ContentManager.cpp  ContentManager.h  ProjectManagement.h  ProjectManager.cpp  ProjectManager.h
OmegaStudio/Source/Remote/: FLStudioRemote.h  RemoteAPI.h  RemoteServer.cpp  RemoteServer.h
OmegaStudio/Source/Sequencer/: ChannelRack.cpp  ChannelRack.h  DrumProgramming.h  GrooveEngine.h  MIDIFX.cpp  MIDIFX.h  PatternSystem.h  PianoRoll.cpp  PianoRoll.h  PianoRollAdvanced.h  PlaylistEngine.cpp  PlaylistEngine.h  StepSequencer.cpp  StepSequencer.h
OmegaStudio/Source/Tests/: StemSeparationTests.cpp
OmegaStudio/Source/Utils/: Atomic.h  Constants.h
OmegaStudio/Source/Visualizers/: Visualizers.h
OmegaStudio/Source/Workflow/: AutomationClip.cpp  AutomationClip.h  ExportEngine.h  GopherCommands.h  KeyboardShortcuts.cpp  KeyboardShortcuts.h  LoopStarterIntegration.h  MacroSystem.cpp  MacroSystem.h  PresetBrowser.cpp  PresetBrowser.h  StemExporter.cpp  StemExporter.h  TrackFreezing.cpp  TrackFreezing.h  UndoRedoSystem.h  UnifiedBrowser.h
OmegaStudio/Tests/: AudioGoldenTests.h  MIDITests.h  MLTests.h  TestRunner.h  UITests.h
docs/: USER_GUIDE.md
(+77 files in other folders)
